# wikipedia-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yaml  release.yaml
wikipedia_mcp/: __main__.py  server.py
