[project]
name = "wikipedia-mcp"
version = "1.0.0"
description = "MCP server for Wikipedia"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.9.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
]

[project.scripts]
wikipedia-mcp = "wikipedia_mcp:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff.format]
quote-style = "single"

[tool.uv]
package = true
